Clean up some warning / errors during build